# aionrs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  release-please-config.json  rust-toolchain.toml  vx.toml
.config/: hakari.toml
.github/workflows/: ci.yml  e2e.yml  release-please.yml  release.yml  renovate-hakari.yml
.tmp/docs/evolution/: progress.md  state.md
crates/aion-agent/: Cargo.toml
crates/aion-agent/src/: agents_md.rs  bootstrap.rs  bootstrap_test.rs  cache_diagnostics.rs  confirm.rs  context.rs  context_usage.rs  context_usage_test.rs  engine.rs  engine_test.rs  error.rs  lib.rs  orchestration.rs  public_error.rs  session.rs  session_test.rs  skill_tool.rs  spawn_tool.rs  spawner.rs  spawner_test.rs  stream.rs  tool_call.rs  tool_call_test.rs  turn.rs  vcr.rs
crates/aion-agent/src/commands/: clear.rs  clear_test.rs  compact.rs  compact_test.rs  context.rs  context_test.rs  help.rs  help_test.rs  mod.rs  registry.rs  registry_test.rs
crates/aion-agent/src/compact/: auto.rs  emergency.rs  estimate.rs  estimate_test.rs  micro.rs  mod.rs  prompt.rs  state.rs
crates/aion-agent/src/output/: mod.rs  null_sink.rs  protocol_sink.rs  terminal.rs
crates/aion-agent/src/plan/: mod.rs  prompt.rs  state.rs  tools.rs
crates/aion-agent/src/skills/: bundled_supplemental_tests.rs  conditional.rs  conditional_supplemental_tests.rs  context_modifier.rs  discovery_supplemental_tests.rs  executor.rs  frontmatter.rs  frontmatter_tests.rs  hooks.rs  integration_tests.rs  loader.rs  loader_supplemental_tests.rs  loader_tests.rs  mcp.rs  watcher_tests.rs
crates/aion-agent/src/skills/bundled/: bundled_tests.rs  hello.rs  mod.rs
crates/aion-agent/tests/: autocompact_test.rs  bootstrap_test.rs  compact_types_test.rs  cwd_injection_test.rs  emergency_test.rs  engine_compact_test.rs  engine_test.rs  json_stream_approval_test.rs  memory_context_integration.rs  microcompact_test.rs  orchestration_test.rs  output_compaction_test.rs  plan_e2e_test.rs  plan_engine_test.rs  plan_prompt_file_test.rs  plan_tools_test.rs  public_api_test.rs  skills_e2e.rs  spawn_description_test.rs  spawn_test.rs  tool_guidance_prompt_test.rs
crates/aion-agent/tests/acceptance/: compact_test.rs  cross_feature_test.rs  file_cache_test.rs  helpers.rs  memory_test.rs  plan_mode_test.rs  tool_desc_test.rs
crates/aion-agent/tests/common/: mod.rs
crates/aion-agent/tests/e2e/: anthropic.rs  compaction.rs  mod.rs  openai.rs
crates/aion-cli/: Cargo.toml
crates/aion-cli/src/: bootstrap.rs  cli.rs  cli_test.rs  main.rs
crates/aion-cli/src/commands/: cmd_session.rs
crates/aion-cli/src/json_stream/: dispatch.rs  message.rs
crates/aion-compact/: Cargo.toml
crates/aion-compact/src/: fold.rs  json.rs  level.rs  lib.rs  sanitize.rs  toon.rs
crates/aion-config/: Cargo.toml
crates/aion-config/src/: auth.rs  compact.rs  compat.rs  compat_test.rs  config.rs  config_test.rs  debug.rs  hooks.rs  hooks_test.rs  lib.rs  logging.rs  schema.rs  shell.rs  shell_test.rs
crates/aion-config/tests/: compact_config_test.rs
crates/aion-core/: Cargo.toml
crates/aion-core/src/: auth.rs  config.rs  context.rs  engine.rs  hooks.rs  lib.rs  session.rs
crates/aion-core/src/agent/: spawner.rs
crates/aion-core/src/mcp/: config.rs  manager.rs  protocol.rs  tool_proxy.rs
crates/aion-core/src/mcp/transport/: mod.rs  sse.rs  stdio.rs  streamable_http.rs
crates/aion-core/src/output/: protocol_sink.rs  terminal.rs
crates/aion-core/src/protocol/: events.rs  mod.rs  reader.rs
crates/aion-core/src/provider/: anthropic.rs  anthropic_shared.rs  compat.rs  mod.rs  openai.rs  retry.rs  vertex.rs
crates/aion-core/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  orchestration.rs  read.rs  registry.rs  spawn.rs  write.rs
crates/aion-core/src/types/: llm.rs  mod.rs
crates/aion-core/tests/: engine_test.rs  json_stream_approval_test.rs  orchestration_test.rs  provider_anthropic_test.rs  provider_openai_test.rs  spawn_test.rs
crates/aion-core/tests/common/: mod.rs
crates/aion-mcp/: Cargo.toml
crates/aion-mcp/src/: manager.rs  protocol.rs  tool_proxy.rs
crates/aion-memory/: Cargo.toml
crates/aion-memory/src/: error.rs  index.rs  lib.rs  paths.rs  prompt.rs  store.rs  types.rs
crates/aion-memory/tests/: e2e_integration.rs  index_integration.rs  paths_integration.rs  prompt_integration.rs  store_integration.rs
crates/aion-process/: Cargo.toml
crates/aion-process/src/: command_runner.rs  containment.rs  lib.rs  runner.rs  runner_test.rs  windows_job.rs
crates/aion-protocol/: Cargo.toml
crates/aion-protocol/src/: commands.rs  commands_test.rs  events.rs  lib.rs  reader.rs  writer.rs
crates/aion-protocol/tests/: capability_discovery_test.rs  commands_test.rs  set_config.rs
crates/aion-provider/: Cargo.toml
crates/aion-providers/: Cargo.toml
crates/aion-providers/src/: anthropic.rs  anthropic_shared.rs  anthropic_shared_test.rs  anthropic_test.rs  bedrock.rs  composed.rs  (+35 more)
crates/aion-skills/: Cargo.toml
crates/aion-tools/: Cargo.toml
crates/aion-types/: Cargo.toml
crates/aion-types/src/: compact.rs  lib.rs  llm.rs  message.rs  message_test.rs  skill_types.rs  tool.rs
crates/aion-types/tests/: plan_mode_transition_test.rs
docs/: README.md  advanced.md  core-concepts.md  getting-started.md  json-stream-protocol.md  mcp.md  providers.md  skills.md  tools.md  troubleshooting.md
src/: config.rs  context.rs  engine.rs  lib.rs  main.rs
src/agent/: spawner.rs
src/mcp/: manager.rs
src/protocol/: writer.rs
src/provider/: bedrock.rs
src/skills/: bundled_supplemental_tests.rs  conditional.rs  context_modifier.rs  discovery.rs  executor.rs  hooks.rs  integration_tests.rs  loader.rs  loader_supplemental_tests.rs  loader_tests.rs  mcp.rs  mod.rs  permissions.rs  permissions_supplemental_tests.rs  prompt.rs  shell.rs  substitution.rs  types.rs  watcher.rs
src/tools/: mod.rs  orchestration.rs  skill.rs
tests/: engine_test.rs  provider_anthropic_test.rs  provider_openai_test.rs  skills_e2e.rs  spawn_test.rs
tests/common/: mod.rs
workspace-hack/: Cargo.toml
(+70 files in other folders)
