[workspace]
resolver = "2"
members = [
    "crates/aion-core",
    "crates/aion-cli",
    "workspace-hack",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/iOfficeAI/aionrs"

# All dependencies (regular + dev) live here so any crate can
# write `foo.workspace = true` in its [dev-dependencies] too.
[workspace.dependencies]
# Internal crates
aion-core = { path = "crates/aion-core" }

# Async runtime
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async trait support
async-trait = "0.1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow    = "1"

# File globbing
glob = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# TOML config parsing
toml = "0.8"

# XDG/platform config directory
dirs = "6"

# Terminal color support
crossterm = "0.28"

# TTY detection
is-terminal = "0.4"

# AWS SigV4 signing (for Bedrock provider)
aws-sigv4            = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-config           = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts          = "1"

# JWT creation (for Vertex GCP service account auth)
jsonwebtoken = "9"

# Base64 encoding
base64 = "0.22"

# URL parsing
url = "2"

# workspace-hack (managed by cargo-hakari for build speed)
workspace-hack = { path = "workspace-hack" }

# Test utilities (listed here so crates can use `.workspace = true`)
wiremock   = "0.6"
tokio-test = "0.4"
tempfile   = "3"
mockall    = "0.13"
rstest     = "0.23"
