[package]
name = "aion-core"
description = "Core engine, providers, tools, MCP and agent infrastructure for aionrs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace       = true
futures.workspace     = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
clap.workspace        = true
thiserror.workspace   = true
anyhow.workspace      = true
glob.workspace        = true
chrono.workspace      = true
toml.workspace        = true
dirs.workspace        = true
crossterm.workspace   = true
is-terminal.workspace = true
url.workspace         = true
base64.workspace      = true
jsonwebtoken.workspace = true

aws-sigv4.workspace            = true
aws-credential-types.workspace = true
aws-config.workspace           = true
aws-sdk-sts.workspace          = true

workspace-hack.workspace = true

[dev-dependencies]
wiremock.workspace   = true
tokio-test.workspace = true
tempfile.workspace   = true
mockall.workspace    = true
rstest.workspace     = true
