[package]
name = "aion-process"
description = "Process execution helpers for aionrs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
workspace-hack.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
