[package]
name = "aion-types"
description = "Shared provider-neutral types for aionrs (LLM, message, tool, protocol)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true

[dev-dependencies]
